--- a/Card.css
+++ b/Card.css
@@ -1,7 +1,7 @@
 main {
    margin: 0;
    padding: 0;
-   height: 80vh;
+   /* height: 80vh; */
    background:#11171F ;
    border: 1px solide red;
    display: flex;
@@ -10,6 +10,9 @@ main {
    font-family: "Roboto", "Open-sans", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+p{
+   font-family: "Open-sans"
+}
 .container {
    width: auto;
    position: relative;
@@ -122,8 +125,8 @@ img {
 
 @media screen and (max-width: 800px) {
    .container {
-      height: border-box;
-      /* margin-top: -400px; */
+      height: auto;
+      margin-top: 50px;
       padding: 50px;
       display: flex;
       align-items: center;
