--- a/Card.css
+++ b/Card.css
@@ -1,18 +1,21 @@
-main {
+body {
    margin: 0;
-   padding: 0;
+}
+
+main {
    /* height: 80vh; */
-   background:#11171F ;
-   border: 1px solide red;
+   background: #11171f;
+   /* border: 1px solide red; */
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Roboto", "Open-sans", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-p{
-   font-family: "Open-sans"
+p {
+   font-family: "Open-sans";
 }
+
 .container {
    width: auto;
    position: relative;
@@ -26,6 +29,8 @@ p{
 .container .card {
    position: relative;
    margin: 10px;
+   margin-top: 70px;
+   height: 500px;
 }
 
 .container .card .face {
@@ -34,7 +39,7 @@ p{
    transition: 0.5s;
 }
 
-         /* CONTENUE SUPERIEUR */
+/* CONTENUE SUPERIEUR */
 
 .container .card .face.face1 {
    position: relative;
@@ -51,7 +56,7 @@ p{
    transform: translateY(0px);
 }
 
-         /* IMAGE */
+/* IMAGE */
 
 img {
    max-width: 400px;
@@ -70,11 +75,11 @@ img {
    transform: translateY(-40px);
 }
 
-         /* TITRE */
+/* TITRE */
 .container .card .face.face1 .content h3 {
    margin: 30px 0 0;
    padding: 5px 0 0 0;
-   color: #E8EEF6;
+   color: #e8eef6;
    text-align: center;
    font-size: 1.2em;
    transition: 0.5s;
@@ -121,7 +126,7 @@ img {
    color: #fff;
 }
 
-         /* MEDIA QUERIES */
+/* MEDIA QUERIES */
 
 @media screen and (max-width: 800px) {
    .container {
@@ -132,11 +137,10 @@ img {
       align-items: center;
       flex-direction: column;
       /* TODO: */
-      border: 1px solid red;
+      /* border: 1px solid red; */
    }
 
-   .container .card 
-   {
+   .container .card {
       margin: 10px;
    }
 }
