--- a/banner.css
+++ b/banner.css
@@ -1,13 +1,15 @@
-.banner1 {
+#banner1 {
     height: 30em;
     width: 100%;
-    background-image: url("banner_1.jpg");
+    background-image: url("banner_2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height:50px;
 }
-
 
 body {
     background-color: #11171F;
@@ -16,28 +18,80 @@ body {
 
 h1 {
     color: #E60023;
+    font-size: 40px;
 }
 
-.text_banner1 {
+.text_banner1  {
     font-family: "roboto", sans-serif;
     font-size: 40px;
     color: #E8EEF6;
     display: flex;
-    justify-content: flex-start;
     align-items: center;
-    margin-left: 50px;
-    margin-bottom: 30px;
+    font-weight: bold;
+    padding: 0px;
+    margin:0;
+}
+
+.banner1_text_bouton {
+    display:flex;
+    flex-direction: column;
+    margin-left:100px;
 
 }
 
 .bouton1 {
+    border:none;
+    border-radius:8px;
+    height: 50px;
+    width: 220px;
+	background:#E8EEF6;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "roboto", sans-serif;
+    box-shadow: 1px 1px 1px #11171F ;
+    color:#11171F;
     display: flex;
-    justify-content:flex-start;
-	font:bold 13px Arial;
-	background:#f5f5f5;
-	color:#555;
-	border-radius:2px;
-	width:100px;
-	border:1px solid #ccc;
-    box-shadow:1px 1px 3px #999;
+    justify-content: center;
+    align-content: center;
+    padding: 0px;
+    margin-top: 20px;
+
+}
+
+@media only screen and (max-width:816px) {
+    #banner1 {
+        max-width: 100%;
+        height: 30em;
+        background-image: url("banner_2.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text_banner1 {
+        font-size: 20px;
+        font-family: "roboto", sans-serif;
+        text-shadow: 2px 2px 2px #11171F;
+        text-align: center;
+    }
+    .bouton1 {
+        display:flex;
+        justify-content: center;
+        align-content: center;
+        height:30px;
+        width: 180px;
+        font-size: 18px;
+
+    }
+    .banner1_text_bouton {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin:0;
+    
+    }
+
 }
