--- a/article.css
+++ b/article.css
@@ -2,34 +2,25 @@ body{
     background-color: #11171F;
 }
 
-nav{
-    background-color: aqua;
-    width: 100%;
-    height: 60px;
-}
-
-.banniere{
-    background-color: burlywood;
-    width: 100%;
-    height: 15em;
-}
 main{
     margin:-0.5em;
 }
 .article1-DBZ{
     background-color: white;
-    padding: 1.2em;
+    padding: 5%;
     
 }
 .typographie{
     font-family: "Open Sans", sans-serif;
     color: black;
+    font-size: large;
 }
 .typographie-titre{
     font-family: "Roboto", sans-serif;
     color:black;
     font-size: 2em;
     text-align: center;
+    margin-bottom: 3em;
 
 }
 .gif-DBZ1{
@@ -44,4 +35,25 @@ main{
 .gif-DBZ2{
     width: 100%;
     border-radius:0.3em;
+}
+.MAJ{
+    font-size: xx-large;
+}
+
+@media screen and (min-width: 430px) {
+    .gif-DBZ1{
+        width: 180px;
+        padding: 0px 20px 20px 0px;
+    }
+    .position-gif-DBZ2{
+        display: flex;
+        justify-content: center;
+    }
+    .gif-DBZ2{
+        width: 400px;
+        padding: 3em 0em;
+    }
+    .article1-DBZ{
+        padding: 10%;
+    }
 }
