--- a/banner.css
+++ b/banner.css
@@ -1,7 +1,7 @@
 #banner1 {
     height: 30em;
     width: 100%;
-    background-image: url("banner_2.jpg");
+    background-image: url(images/banner_1_final_desktop.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -13,12 +13,6 @@
 
 body {
     background-color: #11171F;
-}
-
-
-h1 {
-    color: #E60023;
-    font-size: 40px;
 }
 
 .text_banner1  {
@@ -36,7 +30,6 @@ h1 {
     display:flex;
     flex-direction: column;
     margin-left:100px;
-
 }
 
 .bouton1 {
@@ -55,14 +48,48 @@ h1 {
     align-content: center;
     padding: 0px;
     margin-top: 20px;
+}
 
+.bouton1:hover{
+    cursor: pointer;
+}
+
+#banner_contact_index {
+    background-image: url(images/fond_forme_final.png);
+    height: 35em;
+    width: 100%;
+    display: flex;
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact_index {
+    font-family: "roboto", sans-serif;
+    color: #E8EEF6;
+    font-weight: bold;
+    font-size: 100px;
+    text-shadow: 2px 2px 2px #11171F;
+    border: 9px solid #E8EEF6;
+    padding: 3px;
+    box-shadow: 2px 2px 2px #11171F;
+    display: flex;
+    opacity: 0.85;
+}
+
+.contact_index:hover {
+    font-family: "roboto", sans-serif;
+    color:#11171F;
+    border-color: #11171F;
+    cursor: pointer;  
 }
 
 @media only screen and (max-width:816px) {
     #banner1 {
         max-width: 100%;
         height: 30em;
-        background-image: url("banner_2.jpg");
+        background-image: url(images/banner_1_final.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -77,21 +104,59 @@ h1 {
         text-shadow: 2px 2px 2px #11171F;
         text-align: center;
     }
+
     .bouton1 {
         display:flex;
         justify-content: center;
         align-content: center;
-        height:30px;
+        text-align: center;
+        height:45px;
         width: 180px;
         font-size: 18px;
-
     }
+
+    .bouton1:hover{
+        cursor: pointer;
+    }
+
     .banner1_text_bouton {
         display:flex;
         flex-direction: column;
         align-items: center;
         margin:0;
-    
+        padding-top: 4px;
     }
+
+    #banner_contact_index {
+        background-image: url(images/fond_forme_final.png);
+        height: 35em;
+        width: 100%;
+        display: flex;
+        background-repeat: no-repeat;
+        background-size: cover;
+        justify-content: center;
+        align-items: center;
+        margin: 0px; 
+    }
+    
+    .contact_index {
+        font-family: "roboto", sans-serif;
+        color: #E8EEF6;
+        font-weight: bold;
+        font-size: 50px;
+        text-shadow: 2px 2px 2px #11171F;
+        border: 9px solid #E8EEF6;
+        padding: 3px;
+        box-shadow: 2px 2px 2px #11171F;
+        display: flex;
+        opacity: 0.85;
+    }
+
+    .contact_index:hover {
+        font-family: "roboto", sans-serif;
+        color:#11171F;
+        border-color: #11171F;  
+    }
+
 
 }
