Recup travail Guillaume

--- a/banner.css
+++ b/banner.css
@@ -1,7 +1,7 @@
 #banner1 {
     height: 30em;
     width: 100%;
-    background-image: url("banner_2.jpg");
+    background-image: url("images/banner_2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
