--- a/apropos.css
+++ b/apropos.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-.formulaire-contact{
+.formulaire{
   background:url(images/imageapropro.jpg) no-repeat;
   background-size: cover;
   height:100%;
@@ -12,7 +12,6 @@
 
 #form-main{
 	width:100%;
-	float:left;
 	padding-top:0px;
 }
 
@@ -21,17 +20,13 @@
 	padding-left:35px;
 	padding-right:35px;
 	padding-top:35px;
-	padding-bottom:50px;
-	width: 450px;
-	float: left;
-	left: 50%;
-	position: absolute;
-  margin-top:30px;
-	margin-left: -260px;
-  -moz-border-radius: 7px;
-  -webkit-border-radius: 7px;
+    padding-bottom:50px;
+    display: flex;
+    justify-content: center;
 }
-
+form{
+    width: 50%;
+}
 .feedback-input {
 	color:#3c3c3c;
 	font-family: Helvetica, Arial, sans-serif;
@@ -53,15 +48,15 @@
 .feedback-input:focus{
 	background: #fff;
 	box-shadow: 0;
-	border: 3px solid #3498db;
-	color: #3498db;
+	border: 3px solid #e22315ad;
+	color: #000000;
 	outline: none;
   padding: 13px 13px 13px 54px;
 }
 
 .focused{
-	color:#30aed6;
-	border:#30aed6 solid 3px;
+	color:#000000;
+	border:#e22315ad solid 3px;
 }
 
 /* Icons ---------------------------------- */
@@ -69,7 +64,8 @@
 	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
-	background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    border-radius: 23px;
 }
 
 #name:focus{
@@ -84,7 +80,8 @@
 	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
-	background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    border-radius: 23px;
 }
 
 #email:focus{
@@ -98,7 +95,8 @@
 	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
-	background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    border-radius: 23px;
 }
 
 textarea {
@@ -106,20 +104,20 @@ textarea {
     height: 150px;
     line-height: 150%;
     resize:vertical;
+    border-radius:23px;
 }
 
 input:hover, textarea:hover,
 input:focus, textarea:focus {
-	background-color:white;
+    background-color:white;
 }
-
 #button-blue{
 	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 	float:left;
 	width: 100%;
-	border: #fbfbfb solid 4px;
+	border: #e22315ad solid 4px;
 	cursor:pointer;
-	background-color: #3498db;
+	background-color: #10171fed;
 	color:white;
 	font-size:24px;
 	padding-top:22px;
@@ -129,15 +127,16 @@ input:focus, textarea:focus {
 	transition: all 0.3s;
   margin-top:-4px;
   font-weight:700;
+  border-radius:15px;
 }
 
 #button-blue:hover{
 	background-color: rgba(0,0,0,0);
-	color: #0493bd;
+	color: #3c3c3c;
 }
 	
 .submit:hover {
-	color: #3498db;
+	color: #000000;
 }
 	
 .ease {
@@ -148,7 +147,8 @@ input:focus, textarea:focus {
 	-moz-transition: .3s ease;
 	-o-transition: .3s ease;
 	-ms-transition: .3s ease;
-	transition: .3s ease;
+    transition: .3s ease;
+    border-radius: 15px;
 }
 
 .submit:hover .ease{
@@ -159,10 +159,12 @@ input:focus, textarea:focus {
 @media only screen and (max-width: 580px) {
 	#form-div{
 		left: 3%;
-		margin-right: 3%;
-		width: 88%;
 		margin-left: 0;
 		padding-left: 3%;
-		padding-right: 3%;
-	}
+        padding-right: 3%;
+        
+    }
+    form{
+        width: auto;
+    }
 }
