--- a/article.css
+++ b/article.css
@@ -2,31 +2,24 @@ body{
     background-color: #11171F;
 }
 
-main{
-    margin:-0.5em;
-}
 .article1-DBZ{
-    background-color: white;
+    background-color: #1a1f25;
     padding: 5%;
+    text-align: center;
     
 }
 .typographie{
     font-family: "Open Sans", sans-serif;
-    color: black;
+    color: #E8EEF6;
     font-size: large;
 }
 .typographie-titre{
-    font-family: "Roboto", sans-serif;
-    color:black;
+    font-family: "Patua one",cursive;
+    color: #E8EEF6;
     font-size: 2em;
     text-align: center;
     margin-bottom: 3em;
 
-}
-.gif-DBZ1{
-    width: 130px;
-    float: left;
-    padding:0px 14px 11px 0px;
 }
 .p-float{
     margin-top:30px;
@@ -41,10 +34,6 @@ main{
 }
 
 @media screen and (min-width: 430px) {
-    .gif-DBZ1{
-        width: 180px;
-        padding: 0px 20px 20px 0px;
-    }
     .position-gif-DBZ2{
         display: flex;
         justify-content: center;
