--- a/article.css
+++ b/article.css
@@ -12,6 +12,10 @@ body{
     text-align: center;
     
 }
+.article1-DBZ img{
+    display: flex;
+    
+}
 .typographie{
     font-family: "Open Sans", sans-serif;
     color: #E8EEF6;
