--- a/banner.css
+++ b/banner.css
@@ -30,8 +30,7 @@ body {
 }
 
 .text_banner1 {
-    font-family: "Roboto";
-    font-weight: 900;
+    font-family: "patua one";
     font-size: 40px;
     color: #e8eef6;
     display: flex;
