--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,19 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,
+ 100i,
+300,
+300i,
+400,
+400i,
+500,
+500i,
+700,
+700i,
+900,
+900i&display=swap);
+
 
 .nav{ 
-   font-family: 'Roboto'; 
+   font-family: "Roboto", "Open sans", sans-serif;
    background-color : #11171F; 
    padding : 10px 7px 15px 5px; 
    display : flex ; 
@@ -26,7 +39,6 @@
    z-index: 1000; 
    max-height:0; 
    overflow:hidden; 
-
    -moz-transition: .8s all .3s; 
 } 
    
@@ -97,8 +109,9 @@ border-radius : 2px;
    background : #2f3640; 
    height : 30px; 
    width:420px; 
-   margin : 5px 10px 0px 340px; 
-   border-radius : 40px; 
+   margin : 5px 10px 0px 300px; 
+   border-radius :20px; 
+   
 } 
 
 .search-btn{ 
