--- a/nav.css
+++ b/nav.css
@@ -253,7 +253,7 @@ border-radius : 2px;
       margin : 50px 150px 45px -70px; 
    } 
 } 
-@media screen and (min-width:0px) and (max-width : 999px){ 
+@media screen and (max-width : 999px){ 
    .search-box{ 
       margin : 13px auto; 
       width: 200px; 
@@ -267,17 +267,21 @@ border-radius : 2px;
    } 
    .Anime{      
       font-size: 2em; 
-      margin: 11px 250px; 
+      margin: 11px 0px; 
    } 
    .Articles{ 
-      margin : 11px 250px; 
+      margin : 11px 0px; 
    } 
    .Apropos{ 
-      margin: 0px 250px; 
+      margin: 0px 0px; 
    } 
    .search-txt{ 
       width : 140px;      
    } 
+   #menu-demo2{
+       display: flex;
+       flex-direction: column;
+   }
 } 
 
 
