--- a/footer.css
+++ b/footer.css
@@ -30,6 +30,9 @@ body
    width: 25%;
    padding: 10px;
    box-sizing: border-box;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    
 
 }
@@ -132,7 +135,7 @@ ul li {
 
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 775px) {
 
    .inner-footer {
       display: flex;
