--- a/article.css
+++ b/article.css
@@ -19,12 +19,12 @@ body{
 .typographie{
     font-family: "Open Sans", sans-serif;
     color: #E8EEF6;
-    font-size: large;
+    font-size: 26px;
 }
 .typographie-titre{
     font-family: "Patua one",cursive;
     color: #E8EEF6;
-    font-size: 2em;
+    font-size: 35px;
     text-align: center;
     margin-bottom: 3em;
 
