--- a/article.css
+++ b/article.css
@@ -33,10 +33,11 @@ body{
     margin-top:30px;
     line-height: 32px;
 }
-.gif-DBZ2{
+.gif-DBZ2 .gif-hunter{
     width: 100%;
     border-radius:0.3em;
 }
+
 .MAJ{
     font-size: xx-large;
 }
