commit après présentation

--- a/article.css
+++ b/article.css
@@ -33,7 +33,7 @@ body{
     margin-top:30px;
     line-height: 32px;
 }
-.gif-DBZ2 .gif-hunter{
+.gif-DBZ2 .gif-hunter .gif-onepiece{
     width: 100%;
     border-radius:0.3em;
 }
