--- a/banner.css
+++ b/banner.css
@@ -70,6 +70,44 @@ body {
     cursor: pointer;
 }
 
+/* bonton youtube */
+
+#modal{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+#close-modal{
+    border: none;
+    border-radius: 8px;
+    height: 50px;
+    width: 220px;
+    background: #e8eef6;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "roboto", sans-serif;
+    box-shadow: 1px 1px 1px #11171f;
+    color: #11171f;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 6px;
+    margin-top: 20px;
+
+}
+
+
+/* 
+fin boutoon youtube */
+
 #banner_contact_index {
     background-image: url(images/fond_forme_final.png);
     height: 35em;
